--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
+body{
+    background-color: #F8FFF6; /* 用您想要的颜色替换 #f0f0f0 */
+}
+
+#map-container {
+    width: 100%;
+    height: 90vh;
+}
+
 #map {
-    height: 400px; 
+    height: 100%;
+    width: 100%;
 }
