--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body{
 
 #map-container {
     width: 100%;
-    height: 90vh;
+    height: 100vh;
 }
 
 #map {
@@ -15,3 +15,8 @@ body{
 .custom-container {
     width: 85%;
 }
+
+.font-bold {
+    font-style: italic;
+    font-weight: bold;
+  }
