--- a/index.css
+++ b/index.css
@@ -16,7 +16,20 @@ body{
     width: 85%;
 }
 
-.font-bold {
+.font-italic {
     font-style: italic;
+}
+
+.font-bold {
     font-weight: bold;
   }
+
+.custom-font-size{
+    font-size: 1.5rem;
+    font-weight:350;
+    line-height:1.2;
+}
+
+/* .text-dark {
+    color: gray;
+} */
